--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -97,7 +97,6 @@ month={Sept}
  location = {Cape Town, South Africa},
  pages = {60--63},
  numpages = {4},
- url = {http://doi.acm.org/10.1145/1833335.1833344},
  doi = {10.1145/1833335.1833344},
  acmid = {1833344},
  publisher = {ACM},
@@ -116,7 +115,6 @@ month={Sept}
  pages = {1:1--1:4},
  articleno = {1},
  numpages = {4},
- url = {http://doi.acm.org/10.1145/2031759.2031761},
  doi = {10.1145/2031759.2031761},
  acmid = {2031761},
  publisher = {ACM},
@@ -134,7 +132,6 @@ month={Sept}
  location = {Limerick, Ireland},
  pages = {91--101},
  numpages = {11},
- url = {http://doi.acm.org/10.1145/336512.336537},
  doi = {10.1145/336512.336537},
  acmid = {336537},
  publisher = {ACM},
@@ -171,7 +168,6 @@ month={Sept}
  issn = {0163-5948},
  pages = {1--7},
  numpages = {7},
- url = {http://doi.acm.org/10.1145/2020976.2020983},
  doi = {10.1145/2020976.2020983},
  acmid = {2020983},
  publisher = {ACM},
@@ -208,7 +204,6 @@ month={Aug}
  issn = {0001-0782},
  pages = {87--101},
  numpages = {15},
- url = {http://doi.acm.org.libproxy.helsinki.fi/10.1145/182987.184077},
  doi = {10.1145/182987.184077},
  acmid = {184077},
  publisher = {ACM},
@@ -237,7 +232,6 @@ month={Aug}
  issn = {0163-5948},
  pages = {1--6},
  numpages = {6},
- url = {http://doi.acm.org/10.1145/1507195.1507204},
  doi = {10.1145/1507195.1507204},
  acmid = {1507204},
  publisher = {ACM},
@@ -280,7 +274,6 @@ month={Sept}
  issn = {0098-5589},
  pages = {553--564},
  numpages = {12},
- url = {http://dx.doi.org/10.1109/32.87281},
  doi = {10.1109/32.87281},
  acmid = {126229},
  publisher = {IEEE Press},
@@ -300,7 +293,6 @@ month={Sept}
  issn = {0740-7459},
  pages = {17--28},
  numpages = {12},
- url = {http://dx.doi.org/10.1109/52.382180},
  doi = {10.1109/52.382180},
  acmid = {625469},
  publisher = {IEEE Computer Society Press},
@@ -338,8 +330,7 @@ month={Sept}
 	booktitle = {Eighth {IEEE} Symposium on Software Metrics, 2002. Proceedings},
 	author = {Baudry, B. and Traon, Y. Le and Sunye, G.},
 	year = {2002},
-	keywords = {class interaction, Collaboration, Computer architecture, constraint specifications, control flows, Costs, design-for-testability, diagrams, formal specification, Life testing, object oriented designs, object-oriented programming, program testing, software architecture, Software design, Software Engineering, Software testing, specification languages, System testing, testability, {UML} class diagram, Unified modeling language},
-	file = {IEEE Xplore Abstract Record:files/21/abs_all.html:text/html;IEEE Xplore Full Text PDF:files/20/Baudry et al. - 2002 - Testability analysis of a UML class diagram.pdf:application/pdf}
+	keywords = {class interaction, Collaboration, Computer architecture, constraint specifications, control flows, Costs, design-for-testability, diagrams, formal specification, Life testing, object oriented designs, object-oriented programming, program testing, software architecture, Software design, Software Engineering, Software testing, specification languages, System testing, testability, {UML} class diagram, Unified modeling language}
 }
 
 % arkkitehtuuriset hajut 
@@ -348,7 +339,6 @@ month={Sept}
 @inproceedings{vale_bad_2014,
 	title = {Bad Smells in Software Product Lines: A Systematic Review},
 	isbn = {978-1-4799-7860-1},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7012985},
 	doi = {10.1109/SBCARS.2014.21},
 	shorttitle = {Bad Smells in Software Product Lines},
 	pages = {84--94},
@@ -362,7 +352,6 @@ month={Sept}
 @inproceedings{macia_enhancing_2013,
 	title = {Enhancing the Detection of Code Anomalies with Architecture-Sensitive Strategies},
 	isbn = {978-0-7695-4948-4 978-1-4673-5833-0},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6498466},
 	doi = {10.1109/CSMR.2013.27},
 	pages = {177--186},
 	publisher = {{IEEE}},
@@ -419,7 +408,6 @@ month={May}
  location = {San Francisco, California, USA},
  pages = {65--67},
  numpages = {3},
- url = {http://doi.acm.org/10.1145/243327.243602},
  doi = {10.1145/243327.243602},
  acmid = {243602},
  publisher = {ACM},
@@ -441,7 +429,6 @@ month={May}
 @inproceedings{fontana_towards_2015,
 	title = {Towards Assessing Software Architecture Quality by Exploiting Code Smell Relations},
 	isbn = {978-1-4673-7076-9},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7174842},
 	doi = {10.1109/SAM.2015.8},
 	pages = {1--7},
 	publisher = {{IEEE}},
@@ -454,7 +441,6 @@ month={May}
 @inproceedings{macia_impact_2011,
 	title = {On the Impact of Aspect-Oriented Code Smells on Architecture Modularity: An Exploratory Study},
 	isbn = {978-0-7695-4626-1 978-1-4673-0208-1},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6114565},
 	doi = {10.1109/SBCARS.2011.18},
 	shorttitle = {On the Impact of Aspect-Oriented Code Smells on Architecture Modularity},
 	pages = {41--50},
@@ -468,7 +454,6 @@ month={May}
 @inproceedings{de_andrade_architectural_2014,
 	title = {Architectural bad smells in software product lines: an exploratory study},
 	isbn = {978-1-4503-2523-3},
-	url = {http://dl.acm.org/citation.cfm?doid=2578128.2578237},
 	doi = {10.1145/2578128.2578237},
 	shorttitle = {Architectural bad smells in software product lines},
 	pages = {1--6},
@@ -499,14 +484,12 @@ month={May}
 	booktitle = {13th European Conference on Software Maintenance and Reengineering, 2009. {CSMR} '09},
 	author = {Garcia, J. and Popescu, D. and Edwards, G. and Medvidovic, N.},
 	year = {2009},
-	keywords = {Application software, architectural bad smell identification, Architectural Bad Smells, Architectural Refactoring, Computer architecture, Computer industry, Computer science, Design engineering, design fragments, grid computing, grid technologies, industrial system refactoring, reverse engineering, software architecture, software architectures, Software design, software maintenance, Software systems, system lifecycle properties, system maintainability, Technology management},
-	file = {IEEE Xplore Abstract Record:files/53/abs_all.html:text/html;IEEE Xplore Full Text PDF:files/52/Garcia et al. - 2009 - Identifying Architectural Bad Smells.pdf:application/pdf}
+	keywords = {Application software, architectural bad smell identification, Architectural Bad Smells, Architectural Refactoring, Computer architecture, Computer industry, Computer science, Design engineering, design fragments, grid computing, grid technologies, industrial system refactoring, reverse engineering, software architecture, software architectures, Software design, software maintenance, Software systems, system lifecycle properties, system maintainability, Technology management}
 }
 
 
 @inproceedings{coelho_improving_2005,
 	title = {Improving architecture testability with patterns},
-	url = {http://dl.acm.org/citation.cfm?id=1094890},
 	pages = {114--115},
 	booktitle = {Companion to the 20th annual {ACM} {SIGPLAN} conference on Object-oriented programming, systems, languages, and applications},
 	publisher = {{ACM}},
@@ -519,7 +502,6 @@ month={May}
 
 @inproceedings{bertran_detecting_2011,
 	title = {Detecting architecturally-relevant code smells in evolving software systems},
-	url = {http://dl.acm.org/citation.cfm?id=1986003},
 	pages = {1090--1093},
 	booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
 	publisher = {{ACM}},
@@ -544,7 +526,6 @@ month={May}
 
 @inproceedings{mo_mapping_2013,
 	title = {Mapping architectural decay instances to dependency models},
-	url = {http://dl.acm.org/citation.cfm?id=2663304},
 	pages = {39--46},
 	booktitle = {Proceedings of the 4th International Workshop on Managing Technical Debt},
 	publisher = {{IEEE} Press},
@@ -555,7 +536,6 @@ month={May}
 
 @inproceedings{wong_detecting_2011,
 	title = {Detecting software modularity violations},
-	url = {http://dl.acm.org/citation.cfm?id=1985850},
 	pages = {411--420},
 	booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
 	publisher = {{ACM}},
